Renamed global styles

--- a/assets/css/style.1.0.css
+++ b/assets/css/style.1.0.css
@@ -1,7 +1,9 @@
-@charset "utf-8";
 /*
 Global Styles (Deprecated)
 Description:  Global styling for BenjaminWiederkehr.com
+Websites:     archive.benjaminwiederkehr.com
+              found.benjaminwiederkehr.com
+              master.benjaminwiederkehr.com
 Author:       Benjamin Wiederkehr
 Start:        100525_BW
 Last update:  160531_BW
