--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,7 @@ Last update:  180318_BW
   margin: 0;
 }
 .page-header--image {
+  background-color: #333;
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
