Add call to action button on home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,46 @@ Last update:  180318_BW
   font-size: 1.5rem;
   margin: 0;
 }
+.page-header__action {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+}
+.page-header__action__link {
+  display: block;
+  padding: 2rem 0;
+}
+@media (max-width: 767px) {
+  .page-header__action__link {
+    padding: 1rem 0;
+  }
+}
+.page-header__action__label {
+}
+.page-header__action__link .fa-chevron-down {
+  animation: fade 3s infinite;
+}
+.page-header__action__link:hover .fa-chevron-down {
+  animation: fade 1s infinite;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  40% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+}
 .page-header--image {
   background-color: #333;
   background-position: 0 0;
