--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ Last update:  180318_BW
   background-position: 0 0;
 }
 .page-header--vita {
-  background-position: 0% 0;
+  background-position: 0 0;
 }
 .page-header--events {
   background-position: 100% 0;
